Package_Tools/include-C/vips/h/object.h

#define VIPS_OBJECT_H
/* Handy!

typedef struct _VipsObject VipsObject;
typedef struct _VipsObjectClass VipsObjectClass;

/* Track extra stuff for arguments to objects
 */

typedef enum /*< flags >*/ {
	VIPS_ARGUMENT_NONE = 0,
	VIPS_ARGUMENT_REQUIRED = 1,
	VIPS_ARGUMENT_CONSTRUCT = 2,
	VIPS_ARGUMENT_SET_ONCE = 4,
	VIPS_ARGUMENT_SET_ALWAYS = 8,
	VIPS_ARGUMENT_INPUT = 16,
	VIPS_ARGUMENT_OUTPUT = 32,
	VIPS_ARGUMENT_DEPRECATED = 64,
	VIPS_ARGUMENT_MODIFY = 128,
	VIPS_ARGUMENT_NON_HASHABLE = 256
} VipsArgumentFlags;
/* Keep one of these for every argument.
 */
typedef struct _VipsArgument {
	GParamSpec *pspec; /* pspec for this argument */

	/* More stuff, see below */
} VipsArgument;
/* Keep one of these in the class struct for every argument.
 */
typedef struct _VipsArgumentClass {
	VipsArgument parent;

	/* The class of the object we are an arg for.
	 */
	VipsObjectClass *object_class;

	VipsArgumentFlags flags;
	int priority; /* Order args by this */
	guint offset; /* G_STRUCT_OFFSET of member in object */
} VipsArgumentClass;
/* We have to loop over an objects args in several places, and we can't always
 * use vips_argument_map(), the preferred looper. Have the loop code as a
 * macro as well for these odd cases.
 */

/* And some macros to collect args from a va list.
 *
 * Use something like this:
 *
 *    GParamSpec *pspec;
 *    VipsArgumentClass *argument_class;
 *    VipsArgumentInstance *argument_instance;
 *
 *    if (vips_object_get_argument(VIPS_OBJECT(operation), name,
 * 		   &pspec, &argument_class, &argument_instance))
 * 	   return -1;
 *
 *    VIPS_ARGUMENT_COLLECT_SET(pspec, argument_class, ap);
 *
 * 	   GValue value holds the value of an input argument, do
 * 	   something with it
 *
 *    VIPS_ARGUMENT_COLLECT_GET(pspec, argument_class, ap);
 *
 * 	   void **arg points to where to write an output argument
 *
 *    VIPS_ARGUMENT_COLLECT_END
 */

#define VIPS_TYPE_OBJECT (vips_object_get_type())
#define VIPS_OBJECT(obj) \
	(G_TYPE_CHECK_INSTANCE_CAST((obj), VIPS_TYPE_OBJECT, VipsObject))
#define VIPS_OBJECT_CLASS(klass) \
	(G_TYPE_CHECK_CLASS_CAST((klass), VIPS_TYPE_OBJECT, VipsObjectClass))
#define VIPS_IS_OBJECT(obj) \
	(G_TYPE_CHECK_INSTANCE_TYPE((obj), VIPS_TYPE_OBJECT))
#define VIPS_IS_OBJECT_CLASS(klass) \
	(G_TYPE_CHECK_CLASS_TYPE((klass), VIPS_TYPE_OBJECT))
#define VIPS_OBJECT_GET_CLASS(obj) \
	(G_TYPE_INSTANCE_GET_CLASS((obj), VIPS_TYPE_OBJECT, VipsObjectClass))
extern
gboolean vips_value_is_null(GParamSpec *psoec, const GValue *value);
extern
void vips_object_set_property(GObject *gobject,
	guint property_id, const GValue *value, GParamSpec *pspec);
extern
void vips_object_get_property(GObject *gobject,
	guint property_id, GValue *value, GParamSpec *pspec);
extern
void vips_object_preclose(VipsObject *object);
extern
int vips_object_build(VipsObject *object);
extern
void vips_object_summary_class(VipsObjectClass *klass, VipsBuf *buf);
extern
void vips_object_summary(VipsObject *object, VipsBuf *buf);
extern
void vips_object_dump(VipsObject *object, VipsBuf *buf);
extern
void vips_object_print_summary_class(VipsObjectClass *klass);
extern
void vips_object_print_summary(VipsObject *object);
extern
void vips_object_print_dump(VipsObject *object);
extern
void vips_object_print_name(VipsObject *object);
extern
gboolean vips_object_sanity(VipsObject *object);
/* Don't put spaces around void here, it breaks gtk-doc.
 */
extern
GType vips_object_get_type(void);
extern
void vips_object_class_install_argument(VipsObjectClass *cls,
	GParamSpec *pspec, VipsArgumentFlags flags,
	int priority, guint offset);
extern
int vips_object_set_argument_from_string(VipsObject *object,
	const char *name, const char *value);
extern
gboolean vips_object_argument_needsstring(VipsObject *object,
	const char *name);
extern
int vips_object_get_argument_to_string(VipsObject *object,
	const char *name, const char *arg);
extern
int vips_object_set_required(VipsObject *object, const char *value);
typedef void *(*VipsObjectSetArguments)(VipsObject *object, void *a, void *b);
extern
VipsObject *vips_object_new(GType type,
	VipsObjectSetArguments set, void *a, void *b);
extern
int vips_object_set_valist(VipsObject *object, va_list ap);
extern
int vips_object_set(VipsObject *object, ...)
	;
extern
int vips_object_set_from_string(VipsObject *object, const char *string);
extern
VipsObject *vips_object_new_from_string(VipsObjectClass *object_class,
	const char *p);
extern
void vips_object_to_string(VipsObject *object, VipsBuf *buf);
extern
void *vips_object_map(VipsSListMap2Fn fn, void *a, void *b);
typedef void *(*VipsTypeMapFn)(GType type, void *a);
typedef void *(*VipsTypeMap2Fn)(GType type, void *a, void *b);
typedef void *(*VipsClassMapFn)(VipsObjectClass *cls, void *a);
extern
void *vips_type_map(GType base, VipsTypeMap2Fn fn, void *a, void *b);
extern
void *vips_type_map_all(GType base, VipsTypeMapFn fn, void *a);
extern
int vips_type_depth(GType type);
extern
GType vips_type_find(const char *basename, const char *nickname);
extern
const char *vips_nickname_find(GType type);
extern
void *vips_class_map_all(GType type, VipsClassMapFn fn, void *a);
extern
const VipsObjectClass *vips_class_find(const char *basename,
	const char *nickname);
extern
VipsObject **vips_object_local_array(VipsObject *parent, int n);
extern
void vips_object_local_cb(VipsObject *vobject, GObject *gobject);
#define vips_object_local(V, G) \
	(g_signal_connect(V, "close", G_CALLBACK(vips_object_local_cb), G))
extern
void vips_object_set_static(VipsObject *object, gboolean static_object);
extern
void vips_object_print_all(void);
extern
void vips_object_sanity_all(void);
extern
void vips_object_rewind(VipsObject *object);
extern
void vips_object_unref_outputs(VipsObject *object);
extern
const char *vips_object_get_description(VipsObject *object);