Package_Tools/include-C/vips/pp/object.pp


{ Build the object ... all argument properties have been set,
	 * now build the thing.
	  }
{ Just after build ... the object is fully ready for work.
	  }
{ Try to print something about the class, handy for help displays.
	 * Keep to one line.
	  }
{ Try to print a one-line summary for the object, the user can see
	 * this output via things like "header fred.tif", --vips-cache-trace,
	 * etc.
	  }
{ Try to print everything about the object, handy for debugging.
	  }
{ Sanity-check the object. Print messages and stuff.
	 * Handy for debugging.
	  }
{ Rewind. Save and restore any stuff that needs to survive a
	 * dispose().
	  }
{ Just before close, everything is still alive.
	  }
{ Close, time to free stuff.
	  }
{ Post-close, everything is dead, except the VipsObject pointer.
	 * Useful for eg. deleting the file associated with a temp image.
	  }
{ The CLI interface. Implement these four to get CLI input and output
	 * for your object.
	  }
{ Given a command-line arg (eg. a filename), make an instance of the
	 * object. Just do the g_object_new(), don't call _build().
	 *
	 * Don't call this directly, see vips_object_new_from_string().
	  }
(* Const before type ignored *)
{ The inverse of ^^. Given an object, output what ->new_from_string()
	 * would have been given to make that object.
	  }
{ Does this output arg need an arg from the command line? Image
	 * output, for example, needs a filename to write to.
	  }
{ Write the object to the string. Return 0 for success, or -1 on
	 * error, setting vips_error(). string is NULL if output_needs_arg()
	 * was FALSE.
	  }
(* Const before type ignored *)
{ Class nickname, eg. "VipsInterpolateBicubic" has "bicubic" as a
	 * nickname. Not internationalised.
	  }
(* Const before type ignored *)
{ Class description. Used for help messages, so internationalised.
	  }
(* Const before type ignored *)
{ Hash from pspec to VipsArgumentClass.
	 *
	 * This records the VipsArgumentClass for every pspec used in
	 * VipsObject and any subclass (ie. everywhere), so it's huge. Don't
	 * loop over this hash! Fine for lookups though.
	  }
{ A sorted (by priority) list of the VipsArgumentClass for this class
	 * and any superclasses. This is small and specific to this class.
	 *
	 * Use the stored GType to work out when to restart the list for a
	 * subclass.
	  }
{ This class is deprecated and therefore hidden from various UI bits.
	 *
	 * VipsOperation has a deprecated flag, use that in preference to this
	 * if you can.
	  }
{ Reserved for future expansion.
	  }
  PVipsObjectClass = ^TVipsObjectClass;
  TVipsObjectClass = record
      parent_class : TGObjectClass;
      build : function (object:PVipsObject):longint;cdecl;
      postbuild : function (object:PVipsObject; data:pointer):longint;cdecl;
      summary_class : procedure (cls:PVipsObjectClass; buf:PVipsBuf);cdecl;
      summary : procedure (object:PVipsObject; buf:PVipsBuf);cdecl;
      dump : procedure (object:PVipsObject; buf:PVipsBuf);cdecl;
      sanity : procedure (object:PVipsObject; buf:PVipsBuf);cdecl;
      rewind : procedure (object:PVipsObject);cdecl;
      preclose : procedure (object:PVipsObject);cdecl;
      close : procedure (object:PVipsObject);cdecl;
      postclose : procedure (object:PVipsObject);cdecl;
      new_from_string : function (_string:Pchar):PVipsObject;cdecl;
      to_string : procedure (object:PVipsObject; buf:PVipsBuf);cdecl;
      output_needs_arg : Tgboolean;
      output_to_arg : function (object:PVipsObject; _string:Pchar):longint;cdecl;
      nickname : Pchar;
      description : Pchar;
      argument_table : PVipsArgumentTable;
      argument_table_traverse : PGSList;
      argument_table_traverse_gtype : TGType;
      deprecated : Tgboolean;
      _vips_reserved1 : procedure ;cdecl;
      _vips_reserved2 : procedure ;cdecl;
      _vips_reserved3 : procedure ;cdecl;
      _vips_reserved4 : procedure ;cdecl;
    end;

(* Const before type ignored *)

function vips_value_is_null(psoec:PGParamSpec; value:PGValue):Tgboolean;cdecl;external;
(* Const before type ignored *)
procedure vips_object_set_property(gobject:PGObject; property_id:Tguint; value:PGValue; pspec:PGParamSpec);cdecl;external;
procedure vips_object_get_property(gobject:PGObject; property_id:Tguint; value:PGValue; pspec:PGParamSpec);cdecl;external;
procedure vips_object_preclose(object:PVipsObject);cdecl;external;
function vips_object_build(object:PVipsObject):longint;cdecl;external;
procedure vips_object_summary_class(klass:PVipsObjectClass; buf:PVipsBuf);cdecl;external;
procedure vips_object_summary(object:PVipsObject; buf:PVipsBuf);cdecl;external;
procedure vips_object_dump(object:PVipsObject; buf:PVipsBuf);cdecl;external;
procedure vips_object_print_summary_class(klass:PVipsObjectClass);cdecl;external;
procedure vips_object_print_summary(object:PVipsObject);cdecl;external;
procedure vips_object_print_dump(object:PVipsObject);cdecl;external;
procedure vips_object_print_name(object:PVipsObject);cdecl;external;
function vips_object_sanity(object:PVipsObject):Tgboolean;cdecl;external;
{ Don't put spaces around void here, it breaks gtk-doc.
  }
function vips_object_get_type:TGType;cdecl;external;
procedure vips_object_class_install_argument(cls:PVipsObjectClass; pspec:PGParamSpec; flags:TVipsArgumentFlags; priority:longint; offset:Tguint);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function vips_object_set_argument_from_string(object:PVipsObject; name:Pchar; value:Pchar):longint;cdecl;external;
(* Const before type ignored *)
function vips_object_argument_needsstring(object:PVipsObject; name:Pchar):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function vips_object_get_argument_to_string(object:PVipsObject; name:Pchar; arg:Pchar):longint;cdecl;external;
(* Const before type ignored *)
function vips_object_set_required(object:PVipsObject; value:Pchar):longint;cdecl;external;
type
  PVipsObjectSetArguments = ^TVipsObjectSetArguments;
  TVipsObjectSetArguments = function (object:PVipsObject; a:pointer; b:pointer):pointer;cdecl;

function vips_object_new(_type:TGType; set:TVipsObjectSetArguments; a:pointer; b:pointer):PVipsObject;cdecl;external;
function vips_object_set_valist(object:PVipsObject; ap:Tva_list):longint;cdecl;external;
function vips_object_set(object:PVipsObject; args:array of const):longint;cdecl;external;
function vips_object_set(object:PVipsObject):longint;cdecl;external;
(* Const before type ignored *)
function vips_object_set_from_string(object:PVipsObject; _string:Pchar):longint;cdecl;external;
(* Const before type ignored *)
function vips_object_new_from_string(object_class:PVipsObjectClass; p:Pchar):PVipsObject;cdecl;external;
procedure vips_object_to_string(object:PVipsObject; buf:PVipsBuf);cdecl;external;
function vips_object_map(fn:TVipsSListMap2Fn; a:pointer; b:pointer):pointer;cdecl;external;
type
  PVipsTypeMapFn = ^TVipsTypeMapFn;
  TVipsTypeMapFn = function (_type:TGType; a:pointer):pointer;cdecl;

  PVipsTypeMap2Fn = ^TVipsTypeMap2Fn;
  TVipsTypeMap2Fn = function (_type:TGType; a:pointer; b:pointer):pointer;cdecl;

  PVipsClassMapFn = ^TVipsClassMapFn;
  TVipsClassMapFn = function (cls:PVipsObjectClass; a:pointer):pointer;cdecl;

function vips_type_map(base:TGType; fn:TVipsTypeMap2Fn; a:pointer; b:pointer):pointer;cdecl;external;
function vips_type_map_all(base:TGType; fn:TVipsTypeMapFn; a:pointer):pointer;cdecl;external;
function vips_type_depth(_type:TGType):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function vips_type_find(basename:Pchar; nickname:Pchar):TGType;cdecl;external;
(* Const before type ignored *)
function vips_nickname_find(_type:TGType):Pchar;cdecl;external;
function vips_class_map_all(_type:TGType; fn:TVipsClassMapFn; a:pointer):pointer;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function vips_class_find(basename:Pchar; nickname:Pchar):PVipsObjectClass;cdecl;external;
function vips_object_local_array(parent:PVipsObject; n:longint):^PVipsObject;cdecl;external;
procedure vips_object_local_cb(vobject:PVipsObject; gobject:PGObject);cdecl;external;
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function vips_object_local(V,G : longint) : longint;

procedure vips_object_set_static(object:PVipsObject; static_object:Tgboolean);cdecl;external;
procedure vips_object_print_all;cdecl;external;
procedure vips_object_sanity_all;cdecl;external;
procedure vips_object_rewind(object:PVipsObject);cdecl;external;
procedure vips_object_unref_outputs(object:PVipsObject);cdecl;external;
(* Const before type ignored *)
function vips_object_get_description(object:PVipsObject):Pchar;cdecl;external;
{ C++ end of extern C conditionnal removed }
{__cplusplus }
{$endif}
{VIPS_OBJECT_H }

implementation

{ was #define dname def_expr }
function VIPS_TYPE_OBJECT : longint; { return type might be wrong }
  begin
    VIPS_TYPE_OBJECT:=vips_object_get_type;
  end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function VIPS_OBJECT(obj : longint) : longint;
begin
  VIPS_OBJECT:=G_TYPE_CHECK_INSTANCE_CAST(obj,VIPS_TYPE_OBJECT,VipsObject);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function VIPS_OBJECT_CLASS(klass : longint) : longint;
begin
  VIPS_OBJECT_CLASS:=G_TYPE_CHECK_CLASS_CAST(klass,VIPS_TYPE_OBJECT,VipsObjectClass);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function VIPS_IS_OBJECT(obj : longint) : longint;
begin
  VIPS_IS_OBJECT:=G_TYPE_CHECK_INSTANCE_TYPE(obj,VIPS_TYPE_OBJECT);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function VIPS_IS_OBJECT_CLASS(klass : longint) : longint;
begin
  VIPS_IS_OBJECT_CLASS:=G_TYPE_CHECK_CLASS_TYPE(klass,VIPS_TYPE_OBJECT);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function VIPS_OBJECT_GET_CLASS(obj : longint) : longint;
begin
  VIPS_OBJECT_GET_CLASS:=G_TYPE_INSTANCE_GET_CLASS(obj,VIPS_TYPE_OBJECT,VipsObjectClass);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function vips_object_local(V,G : longint) : longint;
begin
  vips_object_local:=g_signal_connect(V,'close',G_CALLBACK(vips_object_local_cb),G);
end;


end.
